// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`一屏 · 空屏与输入 启动即用——开场提示与输入行在位 1`] = `
" 还没有对话。
 交代一件事，比如「看看工作区里有什么」。
 › 交代一件事，回车发送
 ○ 空闲 · Ctrl+C 退出"
`;

exports[`一屏 · 空屏与输入 交代写完还没发——输入行的草稿显示出来 1`] = `
" 还没有对话。
 交代一件事，比如「看看工作区里有什么」。
 › 看下工作区
 ○ 空闲 · Ctrl+C 退出"
`;

exports[`一屏 · 空屏与输入 交代已发——对话流里留下用户那一行 1`] = `
" › 看下工作区
 › 交代一件事，回车发送
 ○ 空闲 · Ctrl+C 退出"
`;

exports[`一屏 · 流式 思考与正文各成块（流式累积中途的样子） 1`] = `
" （思考）先看看工作区。
 好，我跑一下 ——
 › 交代一件事，回车发送
 ● 工作中 · 模型 MiniMax-M3 · Ctrl+C 中断"
`;

exports[`一屏 · 流式 工具调用流式（参数还没到齐） 1`] = `
" 我调用 exec：
 ▸ 工具 exec {"cmd":"ls"
 › 交代一件事，回车发送
 ● 工作中 · Ctrl+C 中断"
`;

exports[`一屏 · 审批 审批提示 · 重 —— 必闸类不给「总是允许」，屏上说清缘由 1`] = `
" ▸ 工具 exec {"cmd":"ls"}
 ╭────────────────────────────────────────────────────────────────────────────╮
 │ 需要裁决 · 重 · exec                                                       │
 │ 在工作区根执行：ls                                                         │
 │ （只读，不改动任何文件）                                                   │
 │ y 批准 · n 拒绝 ·（必闸类不可「总是允许」——每次都问）                      │
 ╰────────────────────────────────────────────────────────────────────────────╯
 ● 工作中 · Ctrl+C 中断"
`;

exports[`一屏 · 审批 审批提示 · 轻 —— 三个答复键（「总是允许」在这里，且写明管多久） 1`] = `
" ▸ 工具 exec {"cmd":"ls"}
 ╭────────────────────────────────────────────────────────────────────────────╮
 │ 需要裁决 · 轻 · exec                                                       │
 │ 在工作区根执行：ls                                                         │
 │ （只读，不改动任何文件）                                                   │
 │ y 批准 · n 拒绝 · a 总是允许（本会话同类不再问）                           │
 ╰────────────────────────────────────────────────────────────────────────────╯
 ● 工作中 · Ctrl+C 中断"
`;

exports[`一屏 · 工具执行与收束 工具输出两路流 ＋ 结果 ＋ 裁决留痕 1`] = `
" › 跑一下 ls
 ▸ 工具 exec {"cmd":"ls"}
    stdout › README.md
    stdout › packages
    stderr › ls: 无此目录：tmp
    ✓ 完成
    · 裁决：批准（user，1.2s）
 看完了：目录是干净的。
 › 交代一件事，回车发送
 ○ 空闲 · 用量 1284→96 · 上轮 正常收束 · Ctrl+C 退出"
`;

exports[`一屏 · 工具执行与收束 未获批准——结果说明未执行 1`] = `
" › 跑一下 ls
 ▸ 工具 exec {"cmd":"rm -rf tmp"}
    ✗ 失败
    （未获批准，未执行）
    · 裁决：拒绝（user，3.0s）
 › 交代一件事，回车发送
 ○ 空闲 · 上轮 正常收束 · Ctrl+C 退出"
`;

exports[`一屏 · 工具执行与收束 大负载转存——结果只留 blob 引用（外壳不解析） 1`] = `
" › 跑一下 ls
 ▸ 工具 exec {"cmd":"cat big"}
    ✓ 完成　（输出转存 blob：blob_7）
 › 交代一件事，回车发送
 ○ 空闲 · 上轮 正常收束 · Ctrl+C 退出"
`;

exports[`一屏 · 异常与中断 错误行分档呈现 1`] = `
" ！模型错误（超限）：上下文超了
 ！内核异常：内核自身异常
 › 交代一件事，回车发送
 ○ 空闲 · 上轮 出错 · Ctrl+C 退出"
`;

exports[`一屏 · 异常与中断 中断——本轮以 aborted 收束 1`] = `
" › 看下工作区
 好，我跑一下 ——
 › 交代一件事，回车发送
 ○ 空闲 · 上轮 已中断 · Ctrl+C 退出"
`;
